# template

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  cargo-generate.toml  cliff.toml  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/corelib/: Cargo.toml
crates/corelib/src/: lib.rs
tests/: integration_test.rs
