[workspace]
members = [
    "crates/app",
    "crates/corelib"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jivvei <jivvei@example.com>"]
description = "一个现代化的 Rust 2024 项目模板，集成了完整的开发工具链和最佳实践"
license = "MIT"
repository = "https://github.com/Jivvei/template"
keywords = ["template", "rust", "project", "boilerplate"]
categories = ["development-tools"]
readme = "README.md"

[workspace.dependencies]
# 这里可以定义 workspace 级别的依赖版本
# 子 crate 可以直接引用，如：serde = { workspace = true }
